[package]
name = "radix-heap"
version = "0.1.0"
authors = ["Mike Pedersen <noctune9@gmail.com>"]
description = "Fast monotone priority queues"
documentation = "https://noctune.github.io/radix-heap"
repository = "https://github.com/noctune/radix-heap"
readme = "README.md"
keywords = ["heap"]
license = "MIT"

[dependencies]
ieee754 = "0.2"
revord = "0.0"
ordered-float = "0.0"
num = "0.1"

[dev-dependencies]
rand = "0.3"
quickcheck = "0.2"
