[package]
authors = ["Mike Pedersen <mike@mikepedersen.dk>"]
categories = ["data-structures"]
description = "Fast monotone priority queues"
keywords = ["heap"]
license = "MIT"
name = "radix-heap"
readme = "README.md"
repository = "https://github.com/mpdn/radix-heap"
version = "0.4.0"
edition = "2018"

[lib]
bench = false

[[bench]]
harness = false
name = "bench"

[dependencies.ordered-float]
version = "2.8.0"
optional = true

[dev-dependencies]
criterion = "0.3.5"
quickcheck = "1.0.3"
rand_xorshift = "0.3.0"
rand = "0.8.4"

[package.metadata.docs.rs]
all-features = true